@@ -205,14 +205,9 @@
 <!-- ###TEMPLATE_FORM_TEXT_DATE### start-->
 	<div class="###PREFIXID###_date">
 		<label for="###ITEM_ID###" class="###PREFIXID###_label">###FIELDLABEL###</label>
-		<input type="text" id="###ITEM_ID###" class="###PREFIXID###_value hasDatepicker" name="###ITEM_NAME###" value="###ITEM_VALUE###" ###SIZE### ###CONFORM###/>
+		<input type="text" id="###ITEM_ID###" class="###PREFIXID###_value datepicker" name="###ITEM_NAME###" value="###ITEM_VALUE###" ###SIZE### ###CONFORM###/>
 		###CTRL_MESSAGE###
 	</div>
-	<script>
-		jQuery(document).ready(function(){
-			jQuery('####ITEM_ID###').datepicker();
-		});
-	</script>
 <!-- ###TEMPLATE_FORM_TEXT_DATE### end-->
 
 
