@@ -1,3 +1,6 @@
+2012-07-16 Tsi YANG <tsi@in-cite.net>
+	* Fix: Action new file on dataset single view.
+
 2012-07-12 Tsi YANG <tsi@in-cite.net>
 	* Refactor: Renamed conf[table][select_filegroup] to conf[table][dataset].
 	* Feature: Implements single dataset actions "new"/"edit" and added Typoscript configuration.
